# pulseq

./: .codespellrc  .gitignore  AUTHORS  CAMBRIDGE_NOTES.md  LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac
.github/custom-queries/matlab/:  Improper Input Handling.ql   Improper Use of cd.ql   Unsafe Use of mkdir.ql   Use of Deprecated Functions.ql  Hardcoded Credentials.ql  Hardcoded IP Address.ql  Improper Use of pause Function.ql  Unsafe fopen Usage.ql  (+20 more)
.github/workflows/: codeql.yml  matlab-scan.yml  test-ci.yml  update-news.yml
doc/: DoxygenLayout.xml  Makefile.am  Makefile.in  README.md  announcements.html  block_diagram.ipe  customstyles.css  docs.dox  doxy.conf.in  doxygen_sqlite3.db  fetch_announcements.py  footer.html  header.html  links.dox  mainpage.dox  make_webpage  matlab.css  news.dox  seqcode.sty  specification.tex  tutorials.dox
examples/: fid.m  fid.seq  fid.xml  fiddisp.m  fiddisp.seq  gre.m  gre.seq  gre.xml  gredisp.seq  press.seq  press.xml  pressdisp.seq  run_all.m
examples/approved/: fid.matlab.out  fid.out  gre.matlab.out  gre.out  gre_binary.matlab.out  press.matlab.out  press.out
matlab/: Makefile.am  Makefile.in  benchmarkBalancedBST.m  benchmarkMapPerformance.m  demoRead.m  demoWrite.m  demoWriteGre.m  demoWriteRf.m  imab.m  make_all_docs.m  make_matlab_doc.m  parsemr.m  testmatlab.py  writeEpi.m  writeEpiRS.m  writeEpiSpinEcho.m  writeFid.m  writeGradientEcho.m  writeGradientEcho3D.m  writeSelectiveRf.m  writeTrufi.m
matlab/+mr/: Contents.m  addCompressedShapes.m  addCustomLabel.m  addGradients.m  addRamps.m  align.m  block2events.m  calcAdcSeg.m  calcDuration.m  calcRamp.m  calcRfBandwidth.m  calcRfCenter.m  calcRfPower.m  checkTiming.m  compile_mex.m  compile_mex.prj  compressShape.m  compressShape_mat.m  convert.m  decompressShape.m  getSupportedLabels.m  getSupportedRfUse.m  leja_fast.m  makeAdc.m  makeAdiabaticPulse.m  makeArbitraryGrad.m  makeArbitraryRf.m  makeBlockPulse.m  makeDelay.m  makeDigitalOutputPulse.m  makeExtendedTrapezoid.m  makeExtendedTrapezoidArea.m  makeGaussPulse.m  makeHexagonGradientArea.m  makeLabel.m  makeRfShim.m  makeRotation.m  makeSLRpulse.m  makeSincPulse.m  makeSoftDelay.m  (+16 more)
matlab/+mr/+Siemens/: readasc.m
matlab/+mr/+aux/: BalancedBST.m  containers_map_lookup_ex.m  containers_map_lookup_ik.m  findFlank.m  globalVars.m  isOctave.m  isSigPyAvailable.m  md5.m  strstrip.m  version.m
matlab/+mr/+aux/+quat/: conjugate.m  fromRotMat.m  multiply.m  normalize.m  rotate.m  toRotMat.m
matlab/+mr/+aux/+rotmat/: x.m  y.m  z.m
matlab/+mr/+aux/@InputParserCompat/: InputParserCompat.m
matlab/+mr/+aux/@SeqPlot/: SeqPlot.m
matlab/+mr/@EventLibrary/: EventLibrary.m  find_mat.m
matlab/+mr/@SeqPlot/: SeqPlot.m
matlab/+mr/@Sequence/: Sequence.m  autoLabel.m  calcMomentsBtensor.m  calcPNS.m  gradSpectrum.m  read.m  readBinary.m  testReport.m  write.m  writeBinary.m  write_v141.m
matlab/+mr/@TransformFOV/: TransformFOV.m
matlab/demoRecon/: reconExample2DEPI.m  reconExample2DFFT.m  reconExample2DGD.m  reconExample3DFFT.m  reconExampleBART.m  reconExampleCartesianFFT.m  reconFID.m
matlab/demoSeq/: demoRead.m  gre2d_pTxSingleChan_16Tx.seq  gre2d_pTxSingleChan_8Tx.seq  gre_live_demo.m  gre_live_demo_step0.m  pnsTest.m  test.m  writeCineGradientEcho.m  writeEpi.m  writeEpiDiffusionRS.m  writeEpiDiffusionRS_PMC.m  writeEpiRS.m  writeEpiRS_label.m  writeEpiRS_label_softdelay.m  writeEpiRS_label_trans.m  writeEpiSpinEcho.m  writeEpiSpinEchoRS.m  writeEpi_label.m  writeExternalFieldMap.m  writeFastRadialGradientEcho.m  writeFastRadialGradientEcho_rot3D.m  writeFastRadialGradientEcho_rotExt.m  writeFid.m  writeGRE_live_demo.m  writeGRE_live_demo_step0.m  writeGRE_multiEcho_label.m  writeGRE_rfShim.m  writeGradientEcho.m  writeGradientEcho3D.m  writeGradientEcho_grappa.m  writeGradientEcho_label.m  writeGradientEcho_pTx_SingleTx.m  writeHASTE.m  writeMPRAGE.m  writeMPRAGE_4ge.m  writeMPRAGE_grappa.m  writePRESS.m  writeRadialGradientEcho.m  writeRadialGradientEcho_rotExt.m  writeSelectiveRf.m  (+16 more)
matlab/demoUnsorted/: demoRead.m  demoRfSimulation.m  gradSpectrum.m  mini_gre.m  mini_gre_prop.m  musicBadinerie.m  musicEntertainer.m  musicMaus.m  musicRootBeerRag.m  musicRudolph.m  musicSoundTest.m  pnsTest.m  rf_sim.m  rf_simq.m  simKoma.m  simMR0.m  testRotations.m  writeFidBeep.m
matlab/demoUnsorted/+mrMusic/: init.m  melodyToPitchesAndDurations.m  melodyToScale.m  musicToSequence.m
matlab/liveTutorial/: recon01_FID.m  recon02_2DFFT.m  recon03_2D_GD.m  recon04_BART.m  recon05_radial_delay.m  seq01_Fid.m  seq02_Fid_multipleFAs.m  seq02_writeFid_multipleFAs.m  seq03_SE.m  seq03a_SE_withBackGrad.m  seq04_SE_withSpolers.m  seq05_RadialSE.m  seq06_gre_live_demo_step0.m  seq07_gre_live_demo.m  seq08_RadialGradientEcho.m
src/: ExternalSequence.cpp  ExternalSequence.h  Makefile.am  Makefile.in  md5.c  md5.cpp  md5.h  parsemr.cpp  parsemr.sln  parsemr.vcxproj  parsemr.vcxproj.filters  testparser.py
tests/: .gitignore  README.md  epi_rs.m  fid.m  fid.seq  fiddisp.m  fiddisp.seq  gre.m  gre.seq  makeOctaveTestCase.m  run_all.m  testAddCustomLabel.m  testAddGradients.m  testAddRamps.m  testAlign.m  testAutoLabel.m  testAuxFindFlank.m  testAuxStrstrip.m  testAuxVersion.m  testBinarySignature.m  testBlock.m  testBlock2events.m  testCalcADCSegments.m  testCalcDuration.m  testCalcRamp.m  testCalcRfBandwidth.m  testCalcRfCenter.m  testCalcRfPower.m  testCheckTiming.m  testCompressShape.m  testConvert.m  testDecompressShape.m  testDemoSeq.m  testGetSupportedLabels.m  testGetSupportedRfUse.m  testJoinCompressedShapes.m  testLegacy.m  testMakeAdc.m  testMakeAdiabaticPulse.m  testMakeArbitraryGrad.m  (+27 more)
tests/approved/: fid.matlab.out  gre.matlab.out
tests/expected_output/: pulseq_calcAdcSeg.txt  seq1.seq  seq2.seq  seq3.seq  seq4.seq  seq_make_block_pulses.seq  seq_make_gauss_pulses.seq  seq_make_radial.seq  seq_make_sinc_pulses.seq
tests/legacy/: .gitignore  epi_rs.m  fid.m  fiddisp.m  gre.m  gredisp.m  run_all.m
(+11 files in other folders)
